# work-clock

./: .clangd  CMakeLists.txt  main.c
src/: error.h  main.c  task.c  task.h  time.c  time.h
